# chatroom-cpp

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yaml
config/: bot.env  client.yaml  server.env
proto/: chatroom.proto
src/: bot.cpp  client.cpp  server.cpp
tests/: CMakeLists.txt  server_tests.cpp
